<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF9FF">

    <LinearLayout
        android:layout_width="289dp"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="42dp"
        android:layout_marginVertical="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/sign_in_caption"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/round_edit_text"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:hint="@string/first_name_hint"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/round_edit_text"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:hint="@string/last_name_hint"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/round_edit_text"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:hint="@string/email_hint"
            android:textSize="13sp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="35dp"
            android:backgroundTint="#4E55D7"
            android:fontFamily="@font/montserrat"
            android:text="@string/sign_in_caption"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:cornerRadius="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat"
                android:gravity="start"
                android:text="Already have an account?"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvLogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat"
                android:gravity="start"
                android:text="@string/log_in_caption"
                android:textSize="12sp"
                android:layout_marginStart="8dp"
                android:textColor="#254FE6"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/google_icon"
            android:text="@string/google_caption"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:layout_marginTop="76dp"
            android:fontFamily="@font/montserrat"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/apple_icon"
            android:text="@string/apple_caption"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:layout_marginTop="38dp"
            android:fontFamily="@font/montserrat"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>